monticore-grammar/src/test/resources/de/monticore/javalight/cocos/valid/A0809.java
/* (c) https://github.com/MontiCore/monticore */
private constructor(){}
