monticore-grammar/src/test/resources/de/monticore/javalight/cocos/invalid/A0803/A0803.java
/* (c) https://github.com/MontiCore/monticore */
private abstract void method(){}
